# garmin-selftracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sql/: schema.sql
src/: __init__.py  api.py  cli.py  config.py  db.py  derived_metrics.py  garmin_client.py  reminders.py  sync.py
tests/: test_api.py  test_db.py  test_garmin_client.py  test_reminders.py  test_sync.py
web/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  styles.css
web/src/components/: DerivedMetricCard.tsx  SleepWindowChart.tsx
web/src/lib/: api.ts  checkinDraft.test.ts  checkinDraft.ts  constants.ts  correlation.test.ts  correlation.ts  dashboardPlots.test.ts  dashboardPlots.ts  dateAlignment.test.ts  dateAlignment.ts  derivedMetrics.ts  heartRateZones.test.ts  heartRateZones.ts  mockData.ts  questions.test.ts  questions.ts  storage.ts  time.test.ts  time.ts  types.ts
