[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-selftracker"
version = "0.1.0"
description = "Dockerized Garmin Connect extractor with local SQLite storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.2.25,<1.0.0",
]

[tool.setuptools]
packages = ["src"]
